proc-macros/tests/ui/incorrect/method/method_async_raw_incompatible.stderr
error: Methods must be synchronous when used with `raw_method`; use `fn` instead of `async fn`
 --> tests/ui/incorrect/method/method_async_raw_incompatible.rs:5:2
  |
5 | /     #[method(name = "a", raw_method)]
6 | |     async fn a(&self, param: Vec<u8>);
  | |______________________________________^
